realme home setting

--- a/limbo/affiliate/templates/mobile/realme/realme_page/realme_page.html
+++ b/limbo/affiliate/templates/mobile/realme/realme_page/realme_page.html
@@ -272,7 +272,7 @@
               </div>
             </div>
             <div class="mobile-price">
-              <h3>15,999</h3>
+              <h3>Rs. 15,999</h3>
               <p>see more price</p>
             </div>
           </div>
@@ -330,5 +330,410 @@
         </div>
       </div>
       <!-- 4 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>361</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>Realme Narzo 20a</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 9,999</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">MediaTek Helio G35</p>
+                <p class="info">32GB 3GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>6.5 inches</p>
+                <p class="info">IPS LCD</p>
+                <p class="info">720 x 1600 Pixels</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>13-MP + 5-MP + 2-MP + 2-MP</p>
+                <p class="info">LED flash</p>
+                <p class="info">8 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>5000 mAh</p>
+                <p class="info">Fast charging</p>
+                <p class="info"></p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'narzo20a' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 5 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>353</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>Realme Narzo 20</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 13,999</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">MediaTek Helio G80</p>
+                <p class="info">64GB 4GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>6.5 inches</p>
+                <p class="info">IPS LCD</p>
+                <p class="info">1080 x 2340 Pixels</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>64-MP + 8-MP + 2-MP + 2-MP</p>
+                <p class="info">LED flash</p>
+                <p class="info">20 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>6000 mAh</p>
+                <p class="info">Fast charging</p>
+                <p class="info"></p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'narzo20' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 6 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>417</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>Realme 7 Pro - 5G</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 17,999</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">Qualcomm Snapdragon 765G</p>
+                <p class="info">128GB 6GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>6.4 inches</p>
+                <p class="info">Super AMOLED display</p>
+                <p class="info">1080 x 2400 Pixels</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>64-MP + 8-MP + 2-MP + 2-MP</p>
+                <p class="info">LED flash</p>
+                <p class="info">32 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>4500 mAh</p>
+                <p class="info">Fast charging 65W</p>
+                <p class="info"></p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'realme7pro' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 7 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>390</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>Realme 7</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 13,999</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">MediaTek Helio G90T</p>
+                <p class="info">64GB 6GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>6.5 inches</p>
+                <p class="info">IPS LCD display</p>
+                <p class="info">1080 x 2400 Pixels</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>64-MP + 8-MP + 2-MP + 2-MP</p>
+                <p class="info">LED flash</p>
+                <p class="info">16 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>5000 mAh</p>
+                <p class="info">Fast charging 30W</p>
+                <p class="info"></p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'realme7' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 8 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>241</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>Realme 7i</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 15,999</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">Qualcomm Snapdragon 662 (11 nm)</p>
+                <p class="info">128GB 6GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>6.5 inches</p>
+                <p class="info">IPS LCD display</p>
+                <p class="info">720 x 1600 Pixels</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>64-MP + 8-MP + 2-MP + 2-MP</p>
+                <p class="info">LED flash</p>
+                <p class="info">16 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>5000 mAh</p>
+                <p class="info">Fast charging 18W</p>
+                <p class="info"></p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'realme7i' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 9 -->
     </div>
     {% endblock content%}
