--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -143,41 +143,41 @@
     <!-- content -->
     <div class="card-group">
       <div class="card">
-        <a href="{% url 'pococ3' %}"><img src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'iphone12mini' %}"><img src="{% static 'image/mobile/apple/iphone-12-mini-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> POCO C3 : 3/32GB  Read Full review.</h4>
+          <h4><span>REVIEW</span> iPhone 12 mini : 4/64GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>What can be the price of POCO C3 in India?</b></p></a></li>
-            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>When can POCO C3 be released in India?</b></p></a></li>
-            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'iphone12mini' %}"><p class="card-text"><b>What can be the price of 12 mini in India?</b></p></a></li>
+            <li><a href="{% url 'iphone12mini' %}"><p class="card-text"><b>When can 12 mini be released in India?</b></p></a></li>
+            <li><a href="{% url 'iphone12mini' %}"><p class="card-text"><b>iPhone 12 mini - Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
       <div class="card">
-        <a href="{% url 'OnePlus_nord' %}"><img src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" class="card-img-top" alt="...">
+        <a href="{% url 'pocox3' %}"><img src="{% static 'image/mobile/mi/poco-x3-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> onePlus nord 5G : 6/64GB Read Full review</h4>
+          <h4><span>REVIEW</span> POCO X3 : 3/32GB  Read Full review.</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>What can be the price of onePlus nord in India?</b></p></a></li>
-            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>When can onePlus nord be released in India?</b></p></a></li>
-            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>What can be the price of POCO X3 in India?</b></p></a></li>
+            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>When can POCO X3 be released in India?</b></p></a></li>
+            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
       <div class="card">
-        <a href="{% url 'note20ultra' %}"><img src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20-ultra.jpg'%}"  class="card-img-top" alt="...">
+        <a href="{% url 'realme7pro' %}"><img src="{% static 'image/mobile/realme/realme-7-pro-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> Galaxy Note 20 ultra : 8/256GB Read Full review</h4>
+          <h4><span>REVIEW</span> Realme 7 Pro : 6/128GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'note20ultra' %}"><p class="card-text"><b>What can be the price of Note 20 ultra in India?</b></p></a></li>
-            <li><a href="{% url 'note20ultra' %}"><p class="card-text"><b>When can Note 20 ultra be released in India?</b></p></a></li>
-            <li><a href="{% url 'note20ultra' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>What can be the price of Realme 7 Pro in India?</b></p></a></li>
+            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>When can Realme 7 Pro be released in India?</b></p></a></li>
+            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
