--- a/limbo/affiliate/templates/mobile/realme/realme_page/realme_page.html
+++ b/limbo/affiliate/templates/mobile/realme/realme_page/realme_page.html
@@ -170,7 +170,7 @@
       <!-- 2 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
+          <img  src="{% static 'image/mobile/realme/realme-x7-pro-1.jpg' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
@@ -251,7 +251,7 @@
       <!-- 3 -->
       <div class="mobile-specs">
         <div class="mobile-img">
-          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
+          <img  src="{% static 'image/mobile/realme/realme-narzo-20-pro-1.jfif' %}" alt="">
         </div>
         <div class="mobile-info">
           <div class="mobile-name-price">
