--- a/limbo/affiliate/templates/page/mobile_page.html
+++ b/limbo/affiliate/templates/page/mobile_page.html
@@ -167,6 +167,87 @@
           </div>
         </div>
       </div>
+      <!-- 0 -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/realme/realme-7-pro-1.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>417</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>Realme 7 Pro - 5G</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 17,999</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">Qualcomm Snapdragon 765G</p>
+                <p class="info">128GB 6GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>6.4 inches</p>
+                <p class="info">Super AMOLED display</p>
+                <p class="info">1080 x 2400 Pixels</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>64-MP + 8-MP + 2-MP + 2-MP</p>
+                <p class="info">LED flash</p>
+                <p class="info">32 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>4500 mAh</p>
+                <p class="info">Fast charging 65W</p>
+                <p class="info"></p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'realme7pro' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- 1 -->
       <div class="mobile-specs">
         <div class="mobile-img">
@@ -243,6 +324,167 @@
           <div class="short-info">
             <div class="full-specs">
               <h5><a href="{% url '11ProMax' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--  -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/realme/realme-narzo-20-pro-1.jfif' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>368</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>Realme Narzo 20 Pro</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 15,999</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">MediaTek Helio G90</p>
+                <p class="info">64GB 6GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>6.55 inches</p>
+                <p class="info">IPS LCD</p>
+                <p class="info">1080 x 2400 Pixels</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>64-MP + 8-MP + 2-MP + 2-MP</p>
+                <p class="info">LED flash</p>
+                <p class="info">20 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>6000 mAh</p>
+                <p class="info">Fast charging</p>
+                <p class="info"></p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'narzo20pro' %}">Full specification</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--  -->
+      <div class="mobile-specs">
+        <div class="mobile-img">
+          <img  src="{% static 'image/mobile/realme/demo.jpg' %}" alt="">
+        </div>
+        <div class="mobile-info">
+          <div class="mobile-name-price">
+            <div class="mobile-view-name">
+              <div class="mobile-view">
+                <h5>432</h5>
+                <p><i class="fa fa-eye"></i></p>
+              </div>
+              <div class="mobile-name">
+                <h3>Realme Q2 - 5G</h3>
+                <div class="star-rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+            <div class="mobile-price">
+              <h3>Rs. 19,990</h3>
+              <p>see more price</p>
+            </div>
+          </div>
+          <div class="mobile-detail">
+            <div class="performance">
+              <h4>Performance</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>Octa-core</p>
+                <p class="info">MediaTek Dimensity 800U 5G</p>
+                <p class="info">128GB 6GB RAM</p>
+              </div>
+            </div>
+            <div class="display">
+              <h4>Display</h4>
+              <div class="bar">
+                <p class="very-good"></p>
+              </div>
+              <div class="information">
+                <p>6.5 inches</p>
+                <p class="info">IPS LCD</p>
+              </div>
+            </div>
+            <div class="camera">
+              <h4>Camera</h4>
+              <div class="bar">
+                <p class="good"></p>
+              </div>
+              <div class="information">
+                <p>48-MP + 8-MP + 2-MP</p>
+                <p class="info">LED flash</p>
+                <p class="info">16 MP front camera</p>
+              </div>
+            </div>
+            <div class="battery">
+              <h4>Battery</h4>
+              <div class="bar">
+                <p class="excellent"></p>
+              </div>
+              <div class="information">
+                <p>5000 mAh</p>
+                <p class="info">Fast charging 35W</p>
+                <p class="info"></p>
+              </div>
+            </div>
+          </div>
+          <div class="short-info">
+            <div class="full-specs">
+              <h5><a href="{% url 'realmeq2' %}">Full specification</a></h5>
             </div>
           </div>
         </div>
