--- a/limbo/affiliate/templates/blog/technology/earphone/boult-audio-probass-curve.html
+++ b/limbo/affiliate/templates/blog/technology/earphone/boult-audio-probass-curve.html
@@ -32,6 +32,15 @@
             <li>water resistant.</li>
           </ul>
           <p></p>
+          <div class="aff-link1">
+            <form action="https://amzn.to/34Q7hv2">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://amzn.to/34Q7hv2">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
+          </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
