--- a/limbo/affiliate/templates/mobile/other/micromax-in-1b.html
+++ b/limbo/affiliate/templates/mobile/other/micromax-in-1b.html
@@ -1,42 +1,42 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Vivo V20 SE  price in India start from Rs 20,990 ( Expected Price ) and Vivo V20 SE  expected release date is 2020, October 13. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Vivo V20 SE , Vivo V20 SE  specification, Vivo V20 SE  release date, Vivo V20 SE  price, Vivo V20 SE  price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Micromax In 1b price in India start from Rs 6,999 and Micromax In 1b expected release date is 10th November 2020. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Micromax In 1b, Micromax In 1b  specification, Micromax In 1b release date, Micromax In 1b price, Micromax In 1b  price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Vivo V20 SE  price in india, specification and features - hipein{% endblock title%}
+    {% block title%}Micromax In 1b  price in india, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Vivo V20 SE  (8/128 GB) price in india, specification and features.</h1>
-          <p style="font-weight: 400;">Here Rumours comes out Vivo is about to launch its new smartphone, Vivo V20 SE soon. </p>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Micromax In 1b  (2/32 GB) price in india, specification and features.</h1>
+          <p style="font-weight: 400;">Micromax launching his new  phone Micromax In 1b. Which is a budget phone starting from Rs 6,999. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/other/micromax-in-1b-2.webp'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/vivo/vivo-v20-se-2.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">Gadgets 360</a></p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: <a href="#">Lim Reviews</a></p>
         <div class="info">
-          <h2 style="font-weight: 400;">About Vivo V20 SE </h2>
-          <p>Here a lot of leaks have come out about Vivo V20 SE its specification amazes you. Vivo V20 SE  smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an	Octa-core (4x2.0 GHz Kryo 260 Gold & 4x1.8 GHz Kryo 260 Silver) processor and it runs on 	Qualcomm SDM665 Snapdragon 665 (11 nm). </p>
-          <p>Vivo V20 SE  smartphone has an Super AMOLED display with 1080 x 2400 pixels screen resolution and 409 PPI pixel density. Talking about its camera, On the front camera, you get a 32-megapixel primary camera and on the rear camera, there is a 48 megapixel wide-angle, 8 megapixels ultra-wide, and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus, and Continuos Shooting. It has support for fast charging and non-removable 4100 mAh battery. </p>
-          <h3 style="font-weight: 400;">Vivo V20 SE  price in India.</h3>
-          <p>Vivo V20 SE  price in India start from Rs 20,990 ( Expected Price ) and Vivo V20 SE  expected release date is 2020, October 13. This smartphone comes with single variants like 8/128GB RAM. It is available at two color options like Gravity Black, and Oxygen Blue. </p>
-          <h3 style="font-weight: 400;">Vivo V20 SE  Key features:</h3>
+          <h2 style="font-weight: 400;">About Micromax In 1b </h2>
+          <p>Here a lot of leaks have come out about Micromax In 1b its specification amazes you. Micromax In 1b  smartphone runs on the latest version of the Android operating system (Android 10 Go Edition). The phone is powered by an Octa-core (4x2.3 GHz Cortex-A53 & 4x1.8 GHz Cortex-A53) processor and it runs on MediaTek Helio G35 (MT6765V/WB). </p>
+          <p>Micromax In 1b  smartphone has an IPS LCD display with 720x1600 pixels screen resolution and 269 PPI pixel density. Talking about its camera, On the front camera, you get a 8-megapixel primary camera and on the rear camera, there is a 13 megapixel wide-angle and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus, and Continuos Shooting. It has support for fast charging and non-removable 4100 mAh battery. </p>
+          <h3 style="font-weight: 400;">Micromax In 1b  price in India.</h3>
+          <p>Micromax In 1b  price in India start from Rs 6,999 and Micromax In 1b  expected release date is 10th November 2020. This smartphone comes with two variants like 2/32GB RAM and 4/32GB RAM. It is available at two color options like Blue, Purple, and Green. </p>
+          <h3 style="font-weight: 400;">Micromax In 1b  Key features:</h3>
           <ul>
-            <li>Diaplay: 6.44 inches</li>
-            <li>Processor: 	Qualcomm SDM665 Snapdragon 665 (11 nm)</li>
-            <li>primary camera: 48-megapixel + 8-megapixel + 2-megapixel</li>
-            <li>selfie camera: 32-megapixel</li>
-            <li>Battery: Non-removable Li-Ion 4100 mAh battery</li>
-            <li>Fast charging 33W.</li>
+            <li>Diaplay: 6.52 inches</li>
+            <li>Processor: 	MediaTek Helio G35 (12 nm)</li>
+            <li>primary camera: 13-megapixel + 2-megapixel</li>
+            <li>selfie camera: 8-megapixel</li>
+            <li>Battery: Non-removable Li-Ion 5000 mAh battery</li>
+            <li>charging 10W.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Vivo V20 SE  specification</h3>
+    <h3 class="spec_title">Micromax In 1b  specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -44,7 +44,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>2020, October 13</p>
+          <p>10th November 2020</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -64,15 +64,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Make</strong>
-          <p>Vivo</p>
+          <p>Micromax</p>
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>V20 SE</p>
+          <p>In 1b</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Gravity Black, Oxygen Blue</p>
+          <p>Blue, Purple, Green</p>
         </div>
       </div>
     </div>
@@ -112,15 +112,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>Super AMOLED capacitive touchscreen, 16M colors</p>
+          <p>IPS LCD capacitive touchscreen, 16M colors</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
-          <p>6.44</p>
+          <p>6.52</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>1080 x 2400 pixels</p>
+          <p>720 x 1600 pixels</p>
         </div>
         <div class="specs_info1">
           <strong>Protection</strong>
@@ -140,7 +140,7 @@
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>Qualcomm SDM665 Snapdragon 665</p>
+          <p>MediaTek Helio G35 (12 nm)</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
@@ -148,7 +148,7 @@
         </div>
         <div class="specs_info1">
           <strong>Graphics</strong>
-          <p>Adreno 610</p>
+          <p>PowerVR GE8320</p>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>8/128GB RAM</p>
+          <p>2/32GB RAM 4/32GB RAM</p>
         </div>
       </div>
     </div>
@@ -176,11 +176,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Rear Type </strong>
-          <p>Triple</p>
+          <p>Dual</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>48-MP + 8-MP + 2-MP</p>
+          <p>13-MP + 2-MP</p>
         </div>
         <div class="specs_info">
           <strong>Front Type</strong>
@@ -188,7 +188,7 @@
         </div>
         <div class="specs_info">
           <strong>Front camera</strong>
-          <p>32-megapixel</p>
+          <p>8-megapixel</p>
         </div>
       </div>
     </div>
@@ -200,11 +200,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>Li-Po 4100 mAh, non-removable</p>
+          <p>Li-Po 5000 mAh, non-removable</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes, Fast charging 33W</p>
+          <p>charging 10W</p>
         </div>
       </div>
     </div>
@@ -240,11 +240,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint(on screen), accelerometer, gyro, compass,</p>
-        </div>
-        <div class="specs_info">
-          <strong></strong>
-            <p>proximity</p>
+            <p>Fingerprint (rear-mounted), accelerometer, gyro, proximity</p>
         </div>
       </div>
     </div>
@@ -265,8 +261,7 @@
       </div>
     </div>
     <div class="comment">
-      <div class="fb-comments" data-href="https://www.hipein.com/mobile/vivo-v20-se" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/micromax-in-1b" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
     </div>
   </div>
-
 {% endblock specs%}
