--- a/limbo/affiliate/templates/mobile/other/micromax-in-1b.html
+++ b/limbo/affiliate/templates/mobile/other/micromax-in-1b.html
@@ -14,9 +14,9 @@
           <p style="font-weight: 400;">Micromax launching his new  phone Micromax In 1b. Which is a budget phone starting from Rs 6,999. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/vivo/vivo-v20-se-2.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/other/micromax-in-1b-2.webp'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: <a href="#">Lim Reviews</a></p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">Gadgets 360</a></p>
         <div class="info">
           <h2 style="font-weight: 400;">About Micromax In 1b </h2>
           <p>Here a lot of leaks have come out about Micromax In 1b its specification amazes you. Micromax In 1b  smartphone runs on the latest version of the Android operating system (Android 10 Go Edition). The phone is powered by an Octa-core (4x2.3 GHz Cortex-A53 & 4x1.8 GHz Cortex-A53) processor and it runs on MediaTek Helio G35 (MT6765V/WB). </p>
