--- a/limbo/affiliate/templates/mobile/vivo/v20 se/v20-se.html
+++ b/limbo/affiliate/templates/mobile/vivo/v20 se/v20-se.html
@@ -11,12 +11,12 @@
       <div class="main">
         <div class="headline2">
           <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Vivo V20 SE  (8/128 GB) price in india, specification and features.</h1>
-          <p style="font-weight: 400;">Here Rumours comes out Vivo is about to launch its new smartphone, Vivo V20 SE soon. </p>
+          <p style="font-weight: 400;">Here Rumours comes out vivo is about to launch its new smartphone, Vivo V20 SE soon. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/other/micromax-in-1b-2.webp'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/vivo/vivo-v20-se-2.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">Gadgets 360</a></p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by: <a href="#">Lim Reviews</a></p>
         <div class="info">
           <h2 style="font-weight: 400;">About Vivo V20 SE </h2>
           <p>Here a lot of leaks have come out about Vivo V20 SE its specification amazes you. Vivo V20 SE  smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an	Octa-core (4x2.0 GHz Kryo 260 Gold & 4x1.8 GHz Kryo 260 Silver) processor and it runs on 	Qualcomm SDM665 Snapdragon 665 (11 nm). </p>
