--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 9/oneplus-9.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 9/oneplus-9.html
@@ -1,42 +1,42 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Micromax In 1b price in India start from Rs 6,999 and Micromax In 1b expected release date is 10th November 2020. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Micromax In 1b, Micromax In 1b  specification, Micromax In 1b release date, Micromax In 1b price, Micromax In 1b  price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="OnePlus 9 price in India start from Rs. 74,000 and OnePlus 9 expected release date is 10th January 2021. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="OnePlus 9, OnePlus 9  specification, OnePlus 9 release date, OnePlus 9 price, OnePlus 9  price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Micromax In 1b  price in india, specification and features - hipein{% endblock title%}
+    {% block title%}OnePlus 9  price in india, Rumour, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Micromax In 1b  (2/32 GB) price in india, specification and features.</h1>
-          <p style="font-weight: 400;">Micromax launching his new  phone Micromax In 1b. Which is a budget phone starting from Rs 6,999. </p>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> OnePlus 9  (12/512 GB) price in india, Rumour, specification and features.</h1>
+          <p style="font-weight: 400;">OnePlus launching his new  phone OnePlus 9. Which is a budget phone starting from Rs Rs. 74,000. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/other/micromax-in-1b-2.webp'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/oneplus/oneplus-9-2.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">Gadgets 360</a></p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">GSM Arena</a></p>
         <div class="info">
-          <h2 style="font-weight: 400;">About Micromax In 1b </h2>
-          <p>Here a lot of leaks have come out about Micromax In 1b its specification amazes you. Micromax In 1b  smartphone runs on the latest version of the Android operating system (Android 10 Go Edition). The phone is powered by an Octa-core (4x2.3 GHz Cortex-A53 & 4x1.8 GHz Cortex-A53) processor and it runs on MediaTek Helio G35 (MT6765V/WB). </p>
-          <p>Micromax In 1b  smartphone has an IPS LCD display with 720x1600 pixels screen resolution and 269 PPI pixel density. Talking about its camera, On the front camera, you get a 8-megapixel primary camera and on the rear camera, there is a 13 megapixel wide-angle and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus, and Continuos Shooting. It has support for fast charging and non-removable 5000 mAh battery. </p>
-          <h3 style="font-weight: 400;">Micromax In 1b  price in India.</h3>
-          <p>Micromax In 1b  price in India start from Rs 6,999 and Micromax In 1b  expected release date is 10th November 2020. This smartphone comes with two variants like 2/32GB RAM and 4/32GB RAM. It is available at three color options like Blue, Purple, and Green. </p>
-          <h3 style="font-weight: 400;">Micromax In 1b  Key features:</h3>
+          <h2 style="font-weight: 400;">About OnePlus 9 </h2>
+          <p>Here a lot of leaks have come out about OnePlus 9 its specification amazes you. OnePlus 9  smartphone runs on the latest version of the Android operating system Android v11 (Q). The phone is powered by an Octa-core 3.1GHz Single core Kryo 585, a 2.42GHz Tri core Kryo 585 with a 1.8GHz Quad-core Kryo 585 processor configuration and it runs on Qualcomm Snapdragon 875. </p>
+          <p>OnePlus 9 smartphone has an AMOLED display with 1080 x 2400 pixels screen resolution and 396 PPI pixel density. Talking about its camera, On the front camera, you get a 16-megapixel primary camera and on the rear camera, there is a 64 megapixel wide-angle, 16-megapixels ultra-wide, 8-megapixel depth and 2-megapixel micro with an UltraPixel BSI image sensor. camera with features like HDR mode, auto flash, exposure compensation, continuous shooting, and more. It has support for fast charging and non-removable 5000 mAh battery. </p>
+          <h3 style="font-weight: 400;">OnePlus 9  price in India.</h3>
+          <p>OnePlus 9  price in India start from Rs. 74,000 and OnePlus 9  expected release date is 10th January 2021. This smartphone comes with two variants like 8/128GB RAM and 12/512GB RAM. It is available at single color options like Silver. </p>
+          <h3 style="font-weight: 400;">OnePlus 9  Key features:</h3>
           <ul>
-            <li>Diaplay: 6.52 inches</li>
-            <li>Processor: 	MediaTek Helio G35 (12 nm)</li>
-            <li>primary camera: 13-megapixel + 2-megapixel</li>
-            <li>selfie camera: 8-megapixel</li>
+            <li>Diaplay: 6.7 inches</li>
+            <li>Processor: Qualcomm Snapdragon 875</li>
+            <li>primary camera: 64MP + 16MP + 8MP + 2MP</li>
+            <li>selfie camera: 16-megapixel</li>
             <li>Battery: Non-removable Li-Ion 5000 mAh battery</li>
-            <li>charging 10W.</li>
+            <li>Fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Micromax In 1b  specification</h3>
+    <h3 class="spec_title">OnePlus 9  specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -44,7 +44,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>10th November 2020</p>
+          <p>10th January 2021</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -64,15 +64,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Make</strong>
-          <p>Micromax</p>
+          <p>OnePlus</p>
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>In 1b</p>
+          <p>9</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Blue, Purple, Green</p>
+          <p>Silver</p>
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="specs_info">
           <strong>5G</strong>
-          <p>No</p>
+          <p>Yes</p>
         </div>
         <div class="specs_info1">
           <strong>SIM Type</strong>
@@ -112,15 +112,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>IPS LCD capacitive touchscreen, 16M colors</p>
+          <p>AMOLED display capacitive touchscreen</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
-          <p>6.52</p>
+          <p>6.7</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>720 x 1600 pixels</p>
+          <p>1800 x 2400 pixels</p>
         </div>
         <div class="specs_info1">
           <strong>Protection</strong>
@@ -136,11 +136,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>OS</strong>
-          <p>Android 10</p>
+          <p>Android 11 (Q)</p>
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>MediaTek Helio G35 (12 nm)</p>
+          <p>Qualcomm Snapdragon 875</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
@@ -148,7 +148,7 @@
         </div>
         <div class="specs_info1">
           <strong>Graphics</strong>
-          <p>PowerVR GE8320</p>
+          <p>Adreno 660</p>
         </div>
       </div>
     </div>
@@ -160,11 +160,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Card Slot</strong>
-          <p>microSDXC</p>
+          <p>NO</p>
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>2/32GB RAM 4/32GB RAM</p>
+          <p>12/512GB RAM, 8/128GB RAM</p>
         </div>
       </div>
     </div>
@@ -176,11 +176,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Rear Type </strong>
-          <p>Dual</p>
+          <p>Quad</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>13-MP + 2-MP</p>
+          <p>64MP + 16MP + 8MP + 2MP</p>
         </div>
         <div class="specs_info">
           <strong>Front Type</strong>
@@ -188,7 +188,7 @@
         </div>
         <div class="specs_info">
           <strong>Front camera</strong>
-          <p>8-megapixel</p>
+          <p>16-megapixel</p>
         </div>
       </div>
     </div>
@@ -204,7 +204,7 @@
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>charging 10W</p>
+          <p>Yes, Fast charging</p>
         </div>
       </div>
     </div>
@@ -216,7 +216,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>WLAN</strong>
-          <p>Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, hotspot</p>
+          <p>	Wi-Fi 802.11, a/ac/b/g/n/n, dual-band, Wi-Fi Direct, hotspot</p>
         </div>
         <div class="specs_info">
           <strong>Bluetooth</strong>
@@ -228,7 +228,7 @@
         </div>
         <div class="specs_info1">
           <strong>Radio</strong>
-          <p>	FM radio</p>
+          <p>No</p>
         </div>
       </div>
     </div>
@@ -240,7 +240,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint (rear-mounted), accelerometer, gyro, proximity</p>
+            <p>Fingerprint, Proximity Sensor, Ambient Light Sensor,</p>
+        </div>
+        <div class="specs_info1">
+          <strong></strong>
+            <p>Gyro, Accelerometer, Compass</p>
         </div>
       </div>
     </div>
@@ -261,7 +265,7 @@
       </div>
     </div>
     <div class="comment">
-      <div class="fb-comments" data-href="https://www.hipein.com/mobile/micromax-in-1b" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/OnePlus-9" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
     </div>
   </div>
 {% endblock specs%}
